--- a/Src/ModuleServer/Plans/plan.css
+++ b/Src/ModuleServer/Plans/plan.css
@@ -4,21 +4,39 @@ body{
 }
 nav{
   background: #5472abff;
-  height: 50px;
+  height: 70px;
 }
 .button_return{
+  display: inline-block;
   float: left;
+  margin-top: 1%;
+  margin-left: 2%;
+}
+.button_return img{
+  height: 40px;
 }
 .name_plan{
+  display: inline-block;
   float: right;
+  height: 75%;
+  padding-top: 1%;
+  padding-right: 2%;
+  padding-left: 2%;
+  font-size: 25px;
+  color: white;
+  background: rgba(0,0,0,0.2);
 }
-.empty{
+.vide{
   fill: yellow;
   stroke : black;
 }
-.occuped{
+.occupe{
   fill: pink;
   stroke : black;
+}
+.inaccessible{
+  fill: red;
+  stroke: black;
 }
 #container_div_plan{
   display: flex;
